@@ -422,10 +422,6 @@ int mk_wcwidth(int wide,int ucs)
 {
 	int x;
 
-	/* If terminal is not UTF-8 or file is not UTF-8: width is 1 */
-	if (!utf8 || !wide)
-		return 1;
-
 	/* sorted list of non-overlapping intervals of non-spacing characters */
 	/* generated by "uniset +cat=Me +cat=Mn +cat=Cf -00AD +1160-11FF +200B c" */
 	static const struct interval combining[] = {
@@ -471,6 +467,10 @@ int mk_wcwidth(int wide,int ucs)
 		{ 0x1D173, 0x1D182 }, { 0x1D185, 0x1D18B }, { 0x1D1AA, 0x1D1AD },
 		{ 0xE0001, 0xE0001 }, { 0xE0020, 0xE007F }, { 0xE0100, 0xE01EF }
 	};
+
+	/* If terminal is not UTF-8 or file is not UTF-8: width is 1 */
+	if (!utf8 || !wide)
+		return 1;
 
 	/* Control characters are one column wide in JOE */
 	if (ucs < 32 || ucs == 0x7F)
